# BlockAndFocus

./: .gitignore  Cargo.toml  DEVELOPER_MANUAL.md  LICENSE  README.md  justfile
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: commands.rs  ipc_client.rs  lib.rs  main.rs
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/config/: loader.rs  mod.rs
daemon/src/dns/: blocker.rs  mod.rs  server.rs  upstream.rs
daemon/src/ipc/: mod.rs  server.rs
daemon/src/quiz/: generator.rs  mod.rs  validator.rs
daemon/src/schedule/: engine.rs  mod.rs
installer/: com.blockandfocus.daemon.plist
installer/scripts/: postinstall.sh  uninstall.sh
shared/: Cargo.toml
shared/src/: lib.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte
ui/src/lib/components/: BlocklistEditor.svelte  QuizModal.svelte  ScheduleEditor.svelte  StatusPanel.svelte
