[package]
name = "blockandfocus-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "blockandfocus_app"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blockandfocus-shared = { path = "../shared" }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
